# nonebot_plugin_searchBiliInfo

./: .gitignore  README.md  pyproject.toml
docs/: README.md
nonebot_plugin_searchBiliInfo/: README.md  __init__.py  data.py  data_medal.py
nonebot_plugin_searchBiliInfo/html/: composition_page.html
